Add metals and gopls to coc language servers

--- a/conf/coc-settings.json
+++ b/conf/coc-settings.json
@@ -1,3 +1,4 @@
+// Don't change this file manually, comes from https://github.com/igno/vim
 {
   "languageserver": {
     "bash": {
@@ -5,6 +6,16 @@
       "args": ["start"],
       "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
+    },
+    "metals": {
+      "command": "metals-vim",
+      "rootPatterns": ["build.sbt"],
+      "filetypes": ["scala", "sbt"]
+    },
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+      "filetypes": ["go"]
     }
   }
 }
